# GlassBox-AutoML-Agent

./: .gitignore  LICENSE  README.md  __init__.py  agent.py  chat.py  compare_sklearn.py  demo_autofit.py  demo_eda.py  demo_optimization.py  demo_preprocessing.py  demo_real_models.py  deploy.sh  metadata.json  pyproject.toml  report_20260425_223032.html  report_20260425_223412.html  report_20260425_223549.html  report_html.py
agent/: __init__.py  autofit.py
eda/: __init__.py  auto_typer.py  correlation.py  inspector.py  math_utils.py  outliers.py  stats.py
models/: __init__.py  decision_tree.py  knn.py  linear_regression.py  logistic_regression.py  naive_bayes.py  random_forest.py
optimization/: __init__.py  grid_search.py  kfold.py  orchestrator.py  random_search.py  scoring.py
preprocessing/: __init__.py  cleaner.py  encoders.py  imputer.py  scalers.py
tests/: test_auto_typer.py  test_correlation.py  test_inspector.py  test_math_utils.py  test_outliers.py  test_stats.py
