[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glassbox", "glassbox.eda", "glassbox.preprocessing", "glassbox.optimization", "glassbox.agent"]

[tool.setuptools.package-dir]
"glassbox" = "."

[project]
name = "glassbox-automl"
version = "0.3.0"
description = "A transparent, scratch-built Automated Machine Learning library (NumPy-only)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
